# Looksy

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
cli/: README.md  looksy.js  package.json
client/csharp/: README.md
client/rust/: Cargo.toml  README.md
client/rust/src/: client.rs  generated.rs  lib.rs  models.rs
client/ts/: README.md  package-lock.json  package.json
docs/: architecture-overview.md  integration-feature-flag-guide.md  os-input-surface.md  peekaboo-parity-matrix-mar-2026.md  phases-9-14-execution-tracker.md  quickstart.md  release-rollback-runbook.md  shared-automation-plan.md  superset-gap-audit-backlog.md  superset-gap-remediation-plan.md  windows-os-input-hardening-report-mar-2026.md  windows-real-browser-backend-implementation-tracker-mar-2026.md
host/: artifacts.ts  core.ts  httpServer.ts  index.ts  metrics.ts  policy.ts  serverMain.ts  types.ts
host/__tests__/: core.test.ts  httpServer.test.ts  policy.test.ts  windows.automation.test.ts  windows.capture.test.ts
host/adapters/: index.ts  macos.ts  shared.ts  windows.ts  windowsBrowserCdp.ts
protocol/: errors.ts  index.ts  schema.test.ts  schema.ts  version.ts
scripts/: generateProtocolArtifacts.ts  runWindowsRealOsInputSmoke.cjs  runWindowsRealScreenshotSmoke.cjs
tests/: README.md
tests/cli/: command-wrappers.test.ts
tests/conformance/: fixture-driven-conformance.test.ts
tests/helpers/: envelope-assertions.ts  fixture-loader.ts
tests/regression/: client-screenshot-payload.test.ts  (+4 more)
(+28 files in other folders)
