[package]
name = "looksy-client"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for local Looksy host API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
